the method "getCertificateByAlias" added into rest api